Scrollbar color fixed

--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@ $goldenColor: #feb960;
 $whiteColor: #ffffff;
 $goldenrod-color: #f7ac53;
 $neroColor: #181818;
+$cherokeeColor: #f9c486;
 
 $merriweatherFont: Merriweather, serif;
 $openSansFont: "Open Sans", serif;
@@ -17,8 +18,11 @@ $robotoFont: Roboto, serif;
 *, *::before, *::after {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
+
+  /* Scrollbar */
 
   &::-webkit-scrollbar {
     width: 1.5em;
@@ -30,12 +34,13 @@ body {
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #d2ccc4;
-    background-image: linear-gradient(315deg, #d2ccc4 0%, #8b8b8b 74%);
-    outline: 1px solid slategray;
+    background-color: $whiteColor;
+    background-image: linear-gradient(315deg, $cherokeeColor 0%, $goldenrod-color 74%);
+    outline: 1px solid $goldenColor;
     border-radius: 10px;
   }
 }
+
 /* Preloader */
 
 .complete {
@@ -884,7 +889,13 @@ body {
       width: 220px;
       height: 60px;
       background-color: $goldenColor;
+      background-image: linear-gradient(300deg, $cherokeeColor 0%, $goldenrod-color 74%);
       border: none;
+      transition: all 2s ease 0s;
+
+      &:hover {
+        background: $goldenColor;
+      }
 
       p {
         color: #232323;
